--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,17 @@
 
     <packaging>pom</packaging>
 
+    <modules>
+        <module>jpa-entities</module>
+    </modules>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <junit.version>5.4.2</junit.version>
+    </properties>
+
 </project>
